# fino

./: .coveragerc  .flake8  .gitignore  .pre-commit-config.yaml  .travis.yml  README.md  RELEASING.md  fino.py  fino_guess.py  finumber.py  pyproject.toml  setup.cfg  setup.py  test_fino.py  test_finumber.py  tox.ini
.github/workflows/: deploy.yml  lint.yml  release-drafter.yml  test.yml
