[build-system]
build-backend = "hatchling.build"
requires = [
  "hatch-vcs",
  "hatchling",
]

[project]
name = "fino"
description = "Output the Finnish word for a given integer"
readme = "README.md"
keywords = [
  "Finnish",
  "integers",
  "numbers",
  "suomi",
]
authors = [{name = "Hugo van Kemenade"}]
requires-python = ">=3.8"
classifiers = [
  "Development Status :: 6 - Mature",
  "Intended Audience :: Developers",
  "Intended Audience :: Education",
  "Intended Audience :: Science/Research",
  "Natural Language :: English",
  "Natural Language :: Finnish",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
  "Topic :: Artistic Software",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dynamic = [
  "version",
]
[project.optional-dependencies]
tests = [
  "pytest",
  "pytest-cov",
]
[project.urls]
Changelog = "https://github.com/hugovk/fino/releases"
Homepage = "https://github.com/hugovk/fino"
Source = "https://github.com/hugovk/fino"

[tool.hatch]
version.source = "vcs"

[tool.hatch.version.raw-options]
local_scheme = "no-local-version"

[tool.isort]
profile = "black"
