[build-system]
build-backend = "hatchling.build"
requires = [
  "hatch-vcs",
  "hatchling",
]

[project]
name = "fino"
description = "Output the Finnish word for a given integer"
readme = "README.md"
keywords = [
  "Finnish",
  "integers",
  "numbers",
  "suomi",
]
authors = [{name = "Hugo van Kemenade"}]
requires-python = ">=3.8"
classifiers = [
  "Development Status :: 6 - Mature",
  "Intended Audience :: Developers",
  "Intended Audience :: Education",
  "Intended Audience :: Science/Research",
  "Natural Language :: English",
  "Natural Language :: Finnish",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
  "Topic :: Artistic Software",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dynamic = [
  "version",
]
[project.optional-dependencies]
tests = [
  "pytest",
  "pytest-cov",
]
[project.urls]
Changelog = "https://github.com/hugovk/fino/releases"
Homepage = "https://github.com/hugovk/fino"
Source = "https://github.com/hugovk/fino"

[tool.hatch]
version.source = "vcs"

[tool.hatch.version.raw-options]
local_scheme = "no-local-version"

[tool.ruff]
fix = true

[tool.ruff.lint]
select = [
  "C4", # flake8-comprehensions
  "E", # pycodestyle errors
  "EM", # flake8-errmsg
  "F", # pyflakes errors
  "I", # isort
  "ISC", # flake8-implicit-str-concat
  "LOG", # flake8-logging
  "PGH", # pygrep-hooks
  "RUF100", # unused noqa (yesqa)
  "UP", # pyupgrade
  "W", # pycodestyle warnings
  "YTT", # flake8-2020
]
extend-ignore = [
  "E203", # Whitespace before ':'
  "E221", # Multiple spaces before operator
  "E226", # Missing whitespace around arithmetic operator
  "E241", # Multiple spaces after ','
]

[tool.ruff.lint.isort]
known-first-party = ["fino"]
required-imports = ["from __future__ import annotations"]

[tool.pytest.ini_options]
filterwarnings = [
  # Python <= 3.11
  "ignore:sys.monitoring isn't available, using default core:coverage.exceptions.CoverageWarning",
]
