[metadata]
name = fino
version = 0.7.0
description = Output the Finnish word for a given integer.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/hugovk/fino
author = hugovk
keywords =
    Finnish
    suomi
    numbers
    integers
classifiers =
    Development Status :: 6 - Mature
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy
    Intended Audience :: Developers
    Intended Audience :: Education
    Intended Audience :: Science/Research
    Natural Language :: English
    Natural Language :: Finnish
    Topic :: Artistic Software
    Topic :: Scientific/Engineering :: Artificial Intelligence

[options]
py_modules = fino
zip_safe = False
python_requires = >=3.7

[options.extras_require]
tests = pytest; pytest-cov

[flake8]
ignore = E203
max-line-length = 88
